--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 pillow
-pandas
-numpy
 pickle5
-tensorflow
-keras
-
+streamlit==1.11.1
+pandas==1.4.2
+numpy==1.21.2
+scikit-learn==0.24.2
+tensorflow==2.8.0
