--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-pillow
+Pillow
 pickle5
-streamlit==1.11.1
-pandas==1.4.2
-numpy==1.21.2
-scikit-learn==0.24.2
-tensorflow==2.8.0
+streamlit==1.28.2
+pandas==2.0.1
+numpy==1.24.3
+scikit-learn==1.2.2
+tensorflow==2.10.1
